--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -512,6 +512,7 @@
     </div>
 
     <script src="../js/translations.js"></script>
+    <script src="../js/notification-system.js"></script>
     <script src="../js/loading-utils.js"></script>
     <script src="../js/homepage.js"></script>
     <script>
