--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -235,6 +235,17 @@
         const form = document.getElementById('signupForm');
         const messageDiv = document.getElementById('message');
         const submitBtn = document.getElementById('submitBtn');
+        const API_BASE = (() => {
+            const hostname = window.location.hostname;
+            if (
+                hostname.includes('onrender.com') ||
+                hostname.includes('railway.app') ||
+                (!hostname.includes('localhost') && !hostname.includes('127.0.0.1'))
+            ) {
+                return window.location.origin;
+            }
+            return 'http://localhost:3000';
+        })();
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -261,7 +272,7 @@
             submitBtn.textContent = 'Registering...';
 
             try {
-                const response = await fetch('http://localhost:3000/api/auth/register', {
+                const response = await fetch(`${API_BASE}/api/auth/register`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -305,6 +316,7 @@
             }, 5000);
         }
     </script>
+    <script src="../js/notification-system.js"></script>
     <script src="../js/content-protection.js"></script>
 </body>
 </html>
