Add procedure date-updated support, Smartsupp chat integration, and UI polish

--- a/src/pages/user-dashboard.html
+++ b/src/pages/user-dashboard.html
@@ -392,6 +392,7 @@
     <script src="../js/loading-utils.js"></script>
     <script src="../js/session-timeout.js"></script>
     <script src="../js/user-dashboard.js"></script>
+    <script src="../js/smartsupp-chat.js"></script>
     <script src="../js/content-protection.js"></script>
     
     <script>
