--- a/src/pages/admin-dashboard.html
+++ b/src/pages/admin-dashboard.html
@@ -255,6 +255,10 @@
                             <input type="date" id="procedureDueDate" name="procedureDueDate">
                         </div>
                         <div class="form-group">
+                            <label for="procedureDateUpdated">Date Updated</label>
+                            <input type="date" id="procedureDateUpdated" name="procedureDateUpdated">
+                        </div>
+                        <div class="form-group">
                             <label for="procedureRequirements">Requirements</label>
                             <textarea id="procedureRequirements" name="procedureRequirements" rows="4" placeholder="Enter procedure requirements"></textarea>
                         </div>
@@ -375,19 +379,29 @@
                         <input type="text" id="procProcedureName" name="procedureName" required>
                     </div>
 
-                    <div class="form-group">
-                        <label for="procStatus">Status</label>
-                        <select id="procStatus" name="status" required>
-                            <option value="Pending">Pending</option>
-                            <option value="In Progress">In Progress</option>
-                            <option value="Completed">Completed</option>
-                        </select>
-                    </div>
+	                    <div class="form-group">
+	                        <label for="procStatus">Status</label>
+	                        <select id="procStatus" name="status" required>
+	                            <option value="Pending">Pending</option>
+	                            <option value="In Progress">In Progress</option>
+	                            <option value="Completed">Completed</option>
+	                        </select>
+	                    </div>
 
-                    <div class="form-group">
-                        <label for="procRequirements">Requirements</label>
-                        <textarea id="procRequirements" name="requirements" rows="4" required></textarea>
-                    </div>
+	                    <div class="form-group">
+	                        <label for="procDueDate">Due Date</label>
+	                        <input type="date" id="procDueDate" name="dueDate">
+	                    </div>
+
+	                    <div class="form-group">
+	                        <label for="procDateUpdated">Date Updated</label>
+	                        <input type="date" id="procDateUpdated" name="dateUpdated">
+	                    </div>
+
+	                    <div class="form-group">
+	                        <label for="procRequirements">Requirements</label>
+	                        <textarea id="procRequirements" name="requirements" rows="4" required></textarea>
+	                    </div>
 
                     <button type="submit" class="btn btn-primary">Submit Procedure</button>
                 </form>
