--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -515,6 +515,7 @@
     <script src="../js/notification-system.js"></script>
     <script src="../js/loading-utils.js"></script>
     <script src="../js/homepage.js"></script>
+    <script src="../js/smartsupp-chat.js"></script>
     <script>
       // Language dropdown toggle
       document.addEventListener('DOMContentLoaded', function() {
