Commit remaining local changes

--- a/src/pages/user-dashboard.html
+++ b/src/pages/user-dashboard.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/user-dashboard.css">
     <link rel="stylesheet" href="../css/loading.css">
     <link rel="stylesheet" href="../css/protection.css">
+    <script src="../js/smartsupp-chat.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="user-dashboard-body">
@@ -392,7 +393,6 @@
     <script src="../js/loading-utils.js"></script>
     <script src="../js/session-timeout.js"></script>
     <script src="../js/user-dashboard.js"></script>
-    <script src="../js/smartsupp-chat.js"></script>
     <script src="../js/content-protection.js"></script>
     
     <script>
