--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/homepage.css" />
     <link rel="stylesheet" href="../css/loading.css" />
     <link rel="stylesheet" href="../css/protection.css" />
-    <script src="../js/smartsupp-chat.js" defer></script>
+    <script src="../js/tawk-chat.js" defer></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
